Final 'fix' for horizontal scrolling. Only do it on mobile.

--- a/scss/_concept_problem.scss
+++ b/scss/_concept_problem.scss
@@ -173,8 +173,10 @@
 
 }
 
-.ru-answer-area>div.row:first-child {
-    overflow-x: auto;
+@media #{$small-only} {
+    .ru-answer-area>div.row:first-child {
+        overflow-x: auto;
+    }
 }
 
 .ru-answer-wrong
